--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,21 @@
       </div>
     </div>
 
+    <div class="profile-social">
+      <div class="profile-social-title">
+        Поделитесь с друзьями
+      </div>
+      <div class="b-sign-in-buttons">
+        <a href="#" class="b-sign-in-button b-sign-in-button-fb">
+          <%= image_tag asset_pack_path 'login-fb.svg' %>
+        </a>
+        <a href="#" class="b-sign-in-button b-sign-in-button-vk">
+          <i class="fa fa-vk fa-fw"></i>
+          <span>VKONTAKTE</span>
+        </a>
+      </div>
+    </div>
+
   </div>
 </div>
 
