--- a/app/views/users/_userinfo.erb
+++ b/app/views/users/_userinfo.erb
@@ -25,14 +25,18 @@
     </div>
 
     <div class="profile-info">
-      <div class="profile-info-item">
-        <div class="profile-label">
-          Стаж
+
+      <%- if @user.work_experience.present? %>
+        <div class="profile-info-item">
+          <div class="profile-label">
+            Стаж
+          </div>
+          <div class="profile-info-item-body">
+            <%= t('datetime.distance_in_words.x_years', count: @user.work_experience, locale: :ru) %>
+          </div>
         </div>
-        <div class="profile-info-item-body">
-          <%= t('datetime.distance_in_words.x_years', count: @user.work_experience, locale: :ru) %>
-        </div>
-      </div>
+      <% end %>
+
       <div class="profile-info-item">
         <div class="profile-label">
           Должность
