--- a/app/javascript/packs/_organizator.scss
+++ b/app/javascript/packs/_organizator.scss
@@ -6,6 +6,9 @@
 	padding: 32px 0;
 	background-color: #fafafa;
 }
+.partners_1{
+	background-color: #fff;
+}
 
 .partners-title {
 	margin: 0 0 43px;
