--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 <%== render 'header/header' %>
 <%== render 'layouts/messages' %>
 <%== yield %>
+<%== render 'shared/organizator' %>
 <%== render 'layouts/footer' %>
 <%== render 'layouts/socials' %>
 </body>
