--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -2,9 +2,32 @@
   <div>Организатор конкурса</div>
   <h2></h2>
 </section>
+
+<section class="partners partners_1">
+  <div class="partners-title">
+    ОРГАНИЗАТОРЫ
+  </div>
+  <div class="partners-links">
+    <a
+    class="partners-link"
+    href="http://www.trn-news.ru/"
+    target="_blank"
+    >
+      <%= image_tag(asset_pack_path('travel-startups.svg'), size: "308x35", alt: "Travel Startups - сообщество тревел предпринимателей") %>
+    </a>
+    <a
+    class="partners-link"
+    href="http://www.onlinetours.ru/"
+    target="_blank"
+    >
+      <%= image_tag(asset_pack_path('logo-onlinetours@2x.png'), size: "272x48", alt: "Onlinetours") %>
+    </a>
+  </div>
+</section>
+
 <section class="partners">
   <div class="partners-title">
-    Медиапартнеры
+    ИНФОПАРТНЕРЫ
   </div>
   <div class="partners-links">
     <a
@@ -12,28 +35,21 @@
     href="https://www.tourdom.ru/"
     target="_blank"
     >
-      <%= image_tag(asset_pack_path('logo-tourdom@2x.png'), size: "203x26", alt: "Турдом") %>
+      <%= image_tag(asset_pack_path('logo-tourdom@2x.png'), size: "264x34", alt: "Турдом") %>
     </a>
     <a
     class="partners-link"
     href="http://www.trn-news.ru/"
     target="_blank"
     >
-      <%= image_tag(asset_pack_path('logo-trn@2x.png'), size: "128x61", alt: "Travel Russian News") %>
-    </a>
-    <a
-    class="partners-link"
-    href="http://www.trn-news.ru/"
-    target="_blank"
-    >
-      <%= image_tag(asset_pack_path('travel-startups.svg'), alt: "Travel Startups - сообщество тревел предпринимателей") %>
+      <%= image_tag(asset_pack_path('logo-trn.svg'), size: "151x71", alt: "Travel Russian News") %>
     </a>
     <a
     class="partners-link"
     href="https://sletat.ru/"
     target="_blank"
     >
-      <%= image_tag(asset_pack_path('logo-sletat@2x.png'), size: "167x51", alt: "Sletat.ru") %>
+      <%= image_tag(asset_pack_path('logo-sletat@2x.png'), size: "217x66", alt: "Sletat.ru") %>
     </a>
     <span class="partners-link">
       Владельцы и руководители
