--- a/app/javascript/packs/_organizator.scss
+++ b/app/javascript/packs/_organizator.scss
@@ -1,5 +1,10 @@
-.organizator {
-
+.general-partner {
+	display: block;
+	height: 545px;
+	margin: 110px 0 68px;
+	background-image: url('img/banner@2x.jpg');
+	background-size: cover;
+	background-position: center;
 }
 
 .partners {
