--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -1,7 +1,12 @@
-<h1>Catalog#index</h1>
-<p>Find me in app/views/catalog/index.html.erb</p>
+<h1 class="home-title">
+  <div class="home-title-slogan">
+    Конкурс красоты сотрудников туриндустрии
+  </div>
+  <div class="home-title-text">
+    Мисс Туризм Россия 2017
+  </div>
+</h1>
 
-<% if user_signed_in? %>
-  <%= current_user.email %>
-  <%= current_user.admin? %>
-<% end %>
+<div class="home-about">
+  О КОНКУРСЕ
+</div>
