--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -1,7 +1,6 @@
-<section class="organizator">
-  <div>Организатор конкурса</div>
-  <h2></h2>
-</section>
+
+
+<a href="http://sungate-ru.rixos.com/" class="general-partner" target="_blank"></a>
 
 <section class="partners partners_1">
   <div class="partners-title">
