--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -7,6 +7,57 @@
   </div>
 </h1>
 
-<div class="home-about">
+<div class="home-subtitle">
   О КОНКУРСЕ
 </div>
+
+<div class="heroes">
+
+  <div class="heroes-item">
+    <div class="heroes-item-icon">
+      <%= image_tag(asset_pack_path('icon-woman.svg'), size: "90x90") %>
+    </div>
+    <div class="heroes-item-text">
+      Твоя красота затмит пейзажи Австралии, Доминиканы и Мальдив? Ты удивительна, как розовое
+      озеро в Синегале, и интересна, как фауна Мадагаскара?
+    </div>
+  </div>
+
+  <div class="heroes-item">
+    <div class="heroes-item-icon">
+      <%= image_tag(asset_pack_path('icon-18.svg'), size: "90x90") %>
+    </div>
+    <div class="heroes-item-text">
+      Тебе 18 +, ты работаешь в турбизнесе и готова украсить собой мир? Тебя ждёт зажигательный
+      всероссийский конкурс «Мисс Туризм»!
+    </div>
+  </div>
+
+  <div class="heroes-item">
+    <div class="heroes-item-icon">
+      <%= image_tag(asset_pack_path('icon-work.svg'), size: "90x90") %>
+    </div>
+    <div class="heroes-item-text">
+      Регистрируйся прямо сейчас и собирай как можно большей лайков в интернет-голосовании
+      - используй шанс стать одной из 12 участниц.
+      Для этого подключай друзей, публикуй вау-новость в своих соцсетях
+    </div>
+  </div>
+
+  <div class="heroes-item">
+    <div class="heroes-item-icon">
+      <%= image_tag(asset_pack_path('icon-woman.svg'), size: "90x90") %>
+    </div>
+    <div class="heroes-item-text">
+      Состязание финалисток произойдёт в ноябре в шикарном отеле Турции Rixos Sungate,
+      где царит атмосфера вечного праздника и веселья.
+      И пусть победит красивейшая!
+    </div>
+  </div>
+
+</div>
+<!--
+<div class="home-subtitle">
+  Этапы конкурса
+</div>
+-->
