--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -28,5 +28,7 @@ $link-hover-color: lighten($link-color, 15%) !default;
 $font-size-base: 16px;
 $font-size-small: 16px;
 
+$brand-success:         #5cb85c !default;
+
 $btn-success-bg: #ffcc00 !default;
 $btn-success-color: #000000 !default;
