--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -24,16 +24,17 @@
 	text-transform: uppercase;
 }
 
-.heroes{
+.heroes {
 	margin: 0 0 137px;
 }
+
 .heroes-item {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin: 0 0 55px;
 
-	&:last-child{
+	&:last-child {
 		margin: 0;
 	}
 }
@@ -47,4 +48,104 @@
 	font-size: 18px;
 	text-align: left;
 	color: #000000;
+}
+
+.etaps {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	max-width: 1200px;
+	margin: 0 auto;
+
+	&:before {
+		content: '';
+		position: absolute;
+		top: 60px;
+		left: 115px;
+		right: 115px;
+		height: 16px;
+		background-color: #ffcc00;
+	}
+}
+
+.etaps-item {
+	position: relative;
+	width: 230px;
+
+	&:before {
+		content: '';
+		position: absolute;
+		top: 49px;
+		left: 96px;
+		right: 96px;
+		width: 38px;
+		height: 38px;
+		background-color: #ffcc00;
+		border: solid 6px #ffffff;
+		border-radius: 50%;
+	}
+}
+
+.etaps-item-date {
+	margin: 0 0 85px;
+	font-size: 20px;
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: center;
+	color: #909090;
+}
+
+.etaps-item-action {
+	font-size: 22px;
+	line-height: 1.09;
+	text-align: center;
+	color: #000000;
+}
+
+.etaps-date-info {
+	margin: 80px 0 60px;
+	font-size: 18px;
+	line-height: 1.33;
+	text-align: center;
+	color: #000000;
+}
+
+.home-action {
+	margin: 60px 0 150px;
+	text-align: center;
+}
+
+.jury-list {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin: 0 -30px;
+}
+
+.jury-item {
+	//width: 220px;
+	margin: 0 30px;
+}
+
+.jury-item-photo {
+	margin: 0 0 60px;
+	text-align: center;
+	vertical-align: top;
+}
+
+.jury-item-name {
+	font-size: 18px;
+	font-weight: bold;
+	line-height: 1.33;
+	text-align: center;
+	color: #000000;
+	text-transform: uppercase;
+}
+
+.jury-item-info {
+	font-size: 12px;
+	line-height: 1.42;
+	text-align: center;
+	color: #000000;
+	text-transform: uppercase;
 }
