--- a/app/views/layouts/_socials.erb
+++ b/app/views/layouts/_socials.erb
@@ -23,34 +23,34 @@
     var fbShared = $('.btn-shared_fb');
 
 
-    "https://www.facebook.com/dialog/share?app_id={app_id}&display=page&href={url}&redirect_uri={redirect_url}"
+    'https://www.facebook.com/dialog/share?app_id={app_id}&display=page&href={url}&redirect_uri={redirect_url}';
     fbShared.on('click', function() {
       FB.ui({
-        method: 'share',
-        mobile_iframe: true,
-        href: href,
-        //          method: 'share_open_graph',
-        //          action_type: 'og.likes',
-        //          action_properties: JSON.stringify({
-        //            object: 'https://developers.facebook.com/docs/',
-        //          }),
+        //        method: 'share',
+        //        mobile_iframe: true,
+        //        href: href,
+        method: 'share_open_graph',
+        action_type: 'og.likes',
+        action_properties: JSON.stringify({
+          object: href,
+        }),
       }, function(response) {
         // Debug response (optional)
         console.log('fb share callback');
         console.log(response);
 
         FB.api(
-            "/",
+            '/',
             {
-              "id": href
+              'id': href,
             },
-            function (response) {
-              console.log('FB.api')
-              console.log(response)
+            function(response) {
+              console.log('FB.api');
+              console.log(response);
               if (response && !response.error) {
-                console.log(response)
+                console.log(response);
               }
-            }
+            },
         );
       });
     });
