--- a/app/views/users/_photos.erb
+++ b/app/views/users/_photos.erb
@@ -2,23 +2,28 @@
 
   <%- if @root_photo.present? %>
     <div class="profile-photo-root">
+
       <%= image_tag @root_photo.photo_src.middle, class: "img-responsive" %>
-      <div class="profile-photo-actions">
-        <%= link_to members_photo_path(@user, @root_photo),
-                    method: :delete,
-                    class: 'btn btn-default btn-sm',
-                    title: "Удалить фотографию",
-                    data: {
-                        toggle: "tooltip",
-                        placement: "top",
-                        confirm: 'Вы уверенны что хотите удалить эту фотографию?'
-                    } do %>
-          <i class="fa fa-trash-o profile-photo-delete-icon"></i>
-        <% end %>
-      </div>
-      <div class="profile-photo-root-info">
-        Фото, которое будет отображаться в ленте
-      </div>
+
+      <% if user_signed_in? %>
+        <div class="profile-photo-actions">
+          <%= link_to members_photo_path(@user, @root_photo),
+                      method: :delete,
+                      class: 'btn btn-default btn-sm',
+                      title: "Удалить фотографию",
+                      data: {
+                          toggle: "tooltip",
+                          placement: "top",
+                          confirm: 'Вы уверенны что хотите удалить эту фотографию?'
+                      } do %>
+            <i class="fa fa-trash-o profile-photo-delete-icon"></i>
+          <% end %>
+        </div>
+        <div class="profile-photo-root-info">
+          Фото, которое будет отображаться в ленте
+        </div>
+      <% end %>
+
     </div>
   <% end %>
 
@@ -26,34 +31,37 @@
     <%- @user.photos.each do |photo| %>
       <%- unless photo.root %>
         <div class="profile-photo">
+
           <%= image_tag photo.photo_src.thumb, class: "img-responsive" %>
 
-          <div class="profile-photo-actions">
-            <%= simple_form_for photo,
-                                :url => members_edit_photo_path(@user, photo),
-                                :method => :put do |f| %>
-              <%= f.button :button,
-                           class: 'btn btn-default btn-xs',
-                           title: "Сделать фото главным",
-                           data: {
-                               toggle: "tooltip",
-                               placement: "top",
-                           } do %>
-                <i class="fa fa-check-circle-o profile-photo-btn-root-icon"></i>
+          <% if user_signed_in? %>
+            <div class="profile-photo-actions">
+              <%= simple_form_for photo,
+                                  :url => members_edit_photo_path(@user, photo),
+                                  :method => :put do |f| %>
+                <%= f.button :button,
+                             class: 'btn btn-default btn-xs',
+                             title: "Сделать фото главным",
+                             data: {
+                                 toggle: "tooltip",
+                                 placement: "top",
+                             } do %>
+                  <i class="fa fa-check-circle-o profile-photo-btn-root-icon"></i>
+                <% end %>
               <% end %>
-            <% end %>
-            <%= link_to members_photo_path(@user, photo),
-                        method: :delete,
-                        class: 'btn btn-default btn-xs',
-                        title: "Удалить фотографию",
-                        data: {
-                            toggle: "tooltip",
-                            placement: "top",
-                            confirm: 'Вы уверенны что хотите удалить эту фотографию?'
-                        } do %>
-              <i class="fa fa-trash-o profile-photo-delete-icon"></i>
-            <% end %>
-          </div>
+              <%= link_to members_photo_path(@user, photo),
+                          method: :delete,
+                          class: 'btn btn-default btn-xs',
+                          title: "Удалить фотографию",
+                          data: {
+                              toggle: "tooltip",
+                              placement: "top",
+                              confirm: 'Вы уверенны что хотите удалить эту фотографию?'
+                          } do %>
+                <i class="fa fa-trash-o profile-photo-delete-icon"></i>
+              <% end %>
+            </div>
+          <% end %>
 
         </div>
       <% end %>
@@ -70,13 +78,16 @@
   <span class="text-muted">место</span>
 </div>
 
-<%- if @user.photos.length < 4 %>
-  <h4>Загрузите фотографию</h4>
-  <%= simple_form_for @user, :url => members_upload_path, :method => :post do |f| %>
-    <%= f.file_field :photo_src %>
-    <br>
-    <%= f.button :button, class: "btn btn-success btn-lg" do %>
-      Загрузить
+
+<% if user_signed_in? && policy(@user).upload? %>
+  <%- if @user.photos.length < 4 %>
+    <h4>Загрузите фотографию</h4>
+    <%= simple_form_for @user, :url => members_upload_path, :method => :post do |f| %>
+      <%= f.file_field :photo_src %>
+      <br>
+      <%= f.button :button, class: "btn btn-success btn-lg" do %>
+        Загрузить
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
