--- a/app/views/users/_userinfo.erb
+++ b/app/views/users/_userinfo.erb
@@ -3,9 +3,12 @@
     <span class="text-muted">Дата размещения анкеты:</span>
     <%= @user.created_at.present? && @user.created_at.strftime("%d.%m.%Y") %>
   </div>
-  <%= link_to edit_user_path(@user), class: 'profile-edit-link' do %>
-    <span class="profile-edit-link__label">Редактировать</span>
-    <i class="profile-edit-link__icon fa fa-cog" aria-hidden="true"></i>
+
+  <% if user_signed_in? && policy(@user).edit? %>
+    <%= link_to edit_user_path(@user), class: 'profile-edit-link' do %>
+      <span class="profile-edit-link__label">Редактировать</span>
+      <i class="profile-edit-link__icon fa fa-cog" aria-hidden="true"></i>
+    <% end %>
   <% end %>
 </div>
 
