--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,6 @@
 <%== yield %>
 <%== render 'shared/organizator' %>
 <%== render 'layouts/footer' %>
-<%== render 'layouts/socials' %>
+<%== render 'shared/socials' %>
 </body>
 </html>
