--- a/app/views/shared/_socials.erb
+++ b/app/views/shared/_socials.erb
@@ -38,19 +38,22 @@
         console.log('fb share callback');
         console.log(response);
 
-        FB.api(
-            '/',
-            {
-              'id': href,
-            },
-            function(response) {
-              console.log('FB.api');
-              console.log(response);
-              if (response && !response.error) {
-                console.log(response);
-              }
-            },
-        );
+        $.get('http://graph.facebook.com/?id='+href).done(function(resp) {
+          console.log(resp)
+        })
+//        FB.api(
+//            '/',
+//            {
+//              'id': href,
+//            },
+//            function(response) {
+//              console.log('FB.api');
+//              console.log(response);
+//              if (response && !response.error) {
+//                console.log(response);
+//              }
+//            },
+//        );
       });
     });
   });
