--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -75,22 +75,24 @@
   </div>
   <div class="etaps-item">
     <div class="etaps-item-date">
-      с 15 Сентября
+      1 Ноября
     </div>
     <div class="etaps-item-action">
-      <b>Подача анкет:</b>
+      <b>Отборочный тур:</b>
       <br>
-      до 1000 участников
+      онлайн голосование
     </div>
   </div>
   <div class="etaps-item">
     <div class="etaps-item-date">
-      с 15 Сентября
+      5-8 Ноября
     </div>
     <div class="etaps-item-action">
-      <b>Подача анкет:</b>
+      <b>Финал конкурса:</b>
       <br>
-      до 1000 участников
+      голосование жюри
+      Rixos Sungate
+      Белек, Турция
     </div>
   </div>
 </div>
