--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -1,3 +1,19 @@
+<%- content_for :title do %>
+  Мисс Туризм Россия 2017
+<%- end %>
+<%- content_for :description do %>
+  Конкурс красоты сотрудников индустрии туризма Мисс Туризм Россия 2017.
+<%- end %>
+
+<%= render partial: "shared/meta_og",
+           locals: {title: "Мисс Туризм Россия 2017",
+                    desc: "Конкурс красоты сотрудников индустрии туризма Мисс Туризм Россия 2017.",
+                    photo: nil
+           }
+%>
+
+
+
 <h1 class="home-title">
   <div class="home-title-slogan">
     Конкурс красоты сотрудников туриндустрии
@@ -46,7 +62,7 @@
 
   <div class="heroes-item">
     <div class="heroes-item-icon">
-      <%= image_tag(asset_pack_path('icon-woman.svg'), size: "90x90") %>
+      <%= image_tag(asset_pack_path('icon-hotel.svg'), size: "90x90") %>
     </div>
     <div class="heroes-item-text">
       Состязание финалисток произойдёт в ноябре в шикарном отеле Турции Rixos Sungate,
