загрузка фейковых юзеров

--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -9,7 +9,7 @@
   <div class="partners-links">
     <a
     class="partners-link"
-    href="http://www.trn-news.ru/"
+    href="http://www.travelstartups.ru/"
     target="_blank"
     >
       <%= image_tag(asset_pack_path('travel-startups.svg'), size: "308x35", alt: "Travel Startups - сообщество тревел предпринимателей") %>
