--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -8,6 +8,9 @@
 @import "footer";
 @import "home";
 @import "organizator";
+@import "votes";
+@import "owl/assets/owl.carousel";
+@import "owl/assets/owl.theme.default";
 
 .alert{
 	margin: 15px 0;
