--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
   <title>
     <%== content_for?(:title) ?
              yield(:title) :
-             'Мисс Туризм Россия 2017' %>
+             'Мисс Туризм 2017' %>
   </title>
   <meta name="description" content="<%== content_for?(:description) ?
                                             yield(:description) :
-                                            'Конкурс красоты сотрудников индустрии туризма Мисс Туризм Россия 2017.' %>" />
+                                            'Конкурс красоты cотрудниц индустрии туризма Мисс Туризм 2017.' %>" />
 
   <%= yield :og %>
   <%== csrf_meta_tags %>
