--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <%- content_for :title do %>
-  Я участвую в конкурсе красоты Мисс Туризм Россия 2017!
+  Я участвую в конкурсе красоты Мисс Туризм 2017!
 <%- end %>
 <%- content_for :description do %>
   Голосуйте за меня!
@@ -7,7 +7,7 @@
 
 <% if user_signed_in? && policy(@user).edit? %>
   <%= render partial: "shared/meta_og",
-             locals: {title: "Я участвую в конкурсе красоты Мисс Туризм Россия 2017!",
+             locals: {title: "Я участвую в конкурсе красоты Мисс Туризм 2017!",
                       desc: "Голосуйте за меня!",
                       photo: @root_photo ? @root_photo.photo_src.large : nil
              }
@@ -18,7 +18,7 @@
 
   <%= render partial: "shared/meta_og",
              locals: {title: "Посмотрите какая девушка!",
-                      desc: "#{@user.name} участвует в конкурсе красоты Мисс Туризм Россия 2017! Проголосуйте за нее!",
+                      desc: "#{@user.name} участвует в конкурсе красоты Мисс Туризм 2017! Проголосуйте за нее!",
                       photo: @root_photo ? @root_photo.photo_src.large : nil
              }
   %>
@@ -32,7 +32,7 @@
         АНКЕТА УЧАСТНИЦЫ № <%= @user.number %>
       </div>
       <div>
-        Конкурс Мисс Туризм Россия 2017
+        Конкурс Мисс Туризм 2017
       </div>
     </div>
 
