--- a/app/views/votes/anketa.html.erb
+++ b/app/views/votes/anketa.html.erb
@@ -18,7 +18,7 @@
         АНКЕТА УЧАСТНИЦЫ № <%= @user.number %>
       </div>
       <div>
-        Конкурс Мисс Туризм Россия 2017
+        Конкурс Мисс Туризм 2017
       </div>
     </div>
 
