--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -1,3 +1,82 @@
+.home_top {
+	margin: 40px 0;
+	font-family: 'Roboto Slab';
+	font-size: 50px;
+	font-weight: bold;
+	text-align: center;
+	color: #000000;
+	text-transform: uppercase;
+}
+
+.home-users {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+}
+
+.home-users-item {
+	margin: 0 10px;
+
+	&:first-child {
+		margin-left: 0;
+	}
+	&:last-child {
+		margin-right: 0;
+	}
+	.anketa-item{
+		margin-bottom: 0;
+	}
+}
+
+.owl-nav {
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	margin-top: -32px;
+}
+
+.owl-next,
+.owl-prev {
+	width: 64px;
+	height: 64px;
+	opacity: 0.6;
+	border-radius: 4px;
+	background-color: #dde3e9;
+	background-image: url('img/arrow-right.svg');
+	background-repeat: no-repeat;
+	background-position: center;
+
+	&:hover{
+		background-color: #ccd2d8;
+	}
+}
+
+.owl-prev {
+	transform: rotate(180deg);
+}
+
+.btn-votes {
+	display: block;
+	box-sizing: border-box;
+	width: 255px;
+	height: 57px;
+	margin: 40px auto;
+	padding: 15px 0;
+	border-radius: 100px;
+	background-color: #f0f0f0;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: center;
+	color: #000000;
+
+	&:hover{
+		text-decoration: none;
+	}
+}
+
 .home-title {
 	margin: 40px 0 100px;
 	text-align: center;
