--- a/app/views/users/_photos.erb
+++ b/app/views/users/_photos.erb
@@ -76,10 +76,10 @@
 
 <div style="margin: 24px 0">
   <span class="text-muted">Рейтинг:</span>
-  100
+  <%= @user.votes %>
   <span class="text-muted">баллов</span>
   <span class="text-muted">Позиция:</span>
-  125
+  <%= @user_position %>
   <span class="text-muted">место</span>
 </div>
 
