--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,14 +21,27 @@
   %>
 <% end %>
 
-<div class="vote-btn-container">
-  <%== link_to 'Проголосовать за участницу', voteable_path(@user), remote: true %>
-</div>
-<% if user_signed_in? && VotesQuery.new.is_votes(current_user, @user.id)%>
-  <div class="text-center">
+
+<%- if @user_prev %>
+  <%== link_to 'Предыдущая анкета', user_path(@user_prev) %>
+  <%== @user_prev.number %>
+<% end %>
+
+<%- if @user_next %>
+  <%== link_to 'Следующая анкета', user_path(@user_next) %>
+  <%== @user_next.number %>
+<% end %>
+
+
+<% if user_signed_in? && VotesQuery.new.is_votes(current_user, @user.id) %>
+  <div class="vote-btn-container text-center">
     <%== link_to 'Проголосовать за участницу', voteable_path(@user), remote: true %>
     <br>
     <%= @user.votes %>
+  </div>
+<% else %>
+  <div class="vote-btn-container text-center">
+    <%= render partial: "users/votes_btn" %>
   </div>
 <% end %>
 
