--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,29 +22,6 @@
 <% end %>
 
 
-<%- if @user_prev %>
-  <%== link_to 'Предыдущая анкета', user_path(@user_prev) %>
-  <%== @user_prev.number %>
-<% end %>
-
-<%- if @user_next %>
-  <%== link_to 'Следующая анкета', user_path(@user_next) %>
-  <%== @user_next.number %>
-<% end %>
-
-
-<% if user_signed_in? && VotesQuery.new.is_votes(current_user, @user.id) %>
-  <div class="vote-btn-container text-center">
-    <%== link_to 'Проголосовать за участницу', voteable_path(@user), remote: true %>
-    <br>
-    <%= @user.votes %>
-  </div>
-<% else %>
-  <div class="vote-btn-container text-center">
-    <%= render partial: "users/votes_btn" %>
-  </div>
-<% end %>
-
 <div class="profile">
   <div class="container">
 
@@ -63,6 +40,34 @@
       </div>
       <div class="profile-info-col">
         <%== render 'users/userinfo' %>
+
+        <div style="margin: 30px 0">
+
+          <div style="margin: 16px 0">
+            <%- if @user_prev %>
+              <%== link_to 'Предыдущая анкета', user_path(@user_prev), class: 'btn btn-default'%>
+            <% end %>
+
+            <%- if @user_next %>
+              <%== link_to 'Следующая анкета', user_path(@user_next), class: 'btn btn-default' %>
+            <% end %>
+          </div>
+
+
+          <% if user_signed_in? && VotesQuery.new.is_votes(current_user, @user.id) %>
+            <div class="vote-btn-container text-center">
+              <%== link_to 'Проголосовать за участницу',
+                           voteable_path(@user),
+                           remote: true,
+                           class: 'btn btn-success'%>
+            </div>
+          <% else %>
+            <div class="vote-btn-container text-center">
+              <%= render partial: "users/votes_btn" %>
+            </div>
+          <% end %>
+        </div>
+
       </div>
     </div>
 
