--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -5,18 +5,15 @@
   Конкурс красоты cотрудниц индустрии туризма Мисс Туризм 2017.
 <%- end %>
 
+<%= render partial: "shared/meta_og",
+           locals: {title: "Мисс Туризм Россия 2017",
+                    desc: "Конкурс красоты сотрудников индустрии туризма Мисс Туризм Россия 2017.",
+                    photo: nil
+           }
+%>
+
 <div class="home_top">
   ТОП участниц
-</div>
-
-<div class="owl-carousel">
-  <div> Your Content</div>
-  <div> Your Content</div>
-  <div> Your Content</div>
-  <div> Your Content</div>
-  <div> Your Content</div>
-  <div> Your Content</div>
-  <div> Your Content</div>
 </div>
 
 <div class="owl-carousel home-users">
@@ -208,9 +205,9 @@
         Татьяна Дмитрова
       </div>
       <div class="jury-item-info">
-        CEO
+        CEO и Основатель
         <br>
-        Медиахолдинг "Банко"
+        медиахолдинга "Банко"
       </div>
     </div>
 
