--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -1,7 +1,7 @@
 header {
 	position: relative;
 	height: 481px;
-	background-image: url('img/banner-hp.jpg');
+	background-image: url('img/banner-hp-new.jpg');
 	background-position: top center;
 	background-repeat: no-repeat;
 	background-size: cover;
